# stm32-libopencm3-cmake-template

./: CMakeLists.txt  README.md
cmake/: stm32f1.cmake  toolchain-arm-none-eabi-gcc.cmake
src/: blink.c
